--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>My CSS experiment</title>
-    <link rel="stylesheet" href="./CSS_Git/external_stylesheet.css" />
+    <link rel="stylesheet" href="../CSS_Git/external_stylesheet.css" />
   </head>
   <body>
     <h1>Hello World!</h1>
