--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Web Development Projects</h1>
         <h2>Week 1</h2>
             <ul>
-                <li><a href="https://github.com/jpfiles/jpfiles.github.io/web-dev/blob/main/Week 01/index.html">Beginning Web Design</a></li>
+                <li><a href="https://github.com/jpfiles/jpfiles.github.io/web-dev/Week 01/index.html">Beginning Web Design</a></li>
             </ul>
   </body>
 </html>
