--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>Web Development Projects</h1>
-        <h2>Week 1</h2>
+        <h2>Beginning Web Design concept site</h2>
             <ul>
                 <li><a href="https://jpfiles.github.io/web-dev/Week 01/index.html">Beginning Web Design</a></li>
             </ul>
