--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html lang="en-GB">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>By Design GitHub Projects</title>
-    <link rel="stylesheet" href="external_stylesheet.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
-
-    <style>
-    
-    </style>
-  </head>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width", initial-scale="1.0">
+<title>By Design Web Design Projects</title>
+<link rel="stylesheet" href="external_stylesheet.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
+<style>
+body {
+  width: 1280px;
+  height: 100vh;
+  margin: auto;
+  font-family: Montserrat, Verdana, Arial, Helvetica, sans-serif;
+  background-color: whitesmoke;
+}
+</style>
+</head>
   <body>
     <h1>Web Development Projects</h1>
         <h2>Beginning Web Design concept site</h2>
