--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@ body {
   font-family: Montserrat, Verdana, Arial, Helvetica, sans-serif;
   background-color: whitesmoke;
 }
+
+.h1fd {
+  text-align: center;
+}
 </style>
 </head>
   <body>
-    <h1>Web Development Projects</h1>
-        <h2>Beginning Web Design concept site</h2>
-            <ul>
-                <li><a href="https://jpfiles.github.io/web-dev/Week 01/index.html">Beginning Web Design</a></li>
-            </ul>
+    <div class = "h1fd">
+      <h1>Web Development Projects</h1>
+          <h2>Beginning Web Design concept site</h2>
+              <ul>
+                  <li><a href="https://jpfiles.github.io/web-dev/Week 01/index.html">Beginning Web Design</a></li>
+              </ul>
+    </div>        
   </body>
 </html>
