--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
 <style>
+html {
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: inherit;
+}
+
 body {
   width: 1280px;
   height: 100vh;
@@ -18,6 +26,11 @@ body {
 
 .h1fd {
   text-align: center;
+  float: right;
+}
+
+ul {
+  list-style: none;
 }
 </style>
 </head>
