--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ html {
   box-sizing: inherit;
 }
 
+.flex-container {
+  display: flex;
+}
+
 body {
   width: 1280px;
   height: 100vh;
@@ -33,6 +37,7 @@ li {
 }
 </style>
 </head>
+<div class = "flex-container">
   <body>
     <div class = "h1fd">
       <h1>Web Development Projects</h1>
@@ -42,4 +47,5 @@ li {
               </ul>
     </div>        
   </body>
+</div>
 </html>
