Added divs, headerm and columns

--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
 </head>
 <div class = "flex-container">
   <body>
-    <div class = "h1fd">
+    <div class = "header">
       <h1>Web Development Projects</h1>
+    </div>
+    <div class="row">
+      <div class="column" style="background-color:#aaa;">Column</div>
+      <div class="column" style="background-color:#bbb;">Column</div>
+      <div class="column" style="background-color:#ccc;">Column</div>
+    </div>
+    
           <h2>Beginning Web Design concept site</h2>
               <ul>
                   <li><a href="https://jpfiles.github.io/web-dev/Week 01/index.html">Beginning Web Design</a></li>
               </ul>
-    </div>        
+    </div> 
+    <div class="footer">
+      <p>Footer</p>
+    </div>
   </body>
 </div>
 </html>
