--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width", initial-scale="1.0">
 <title>By Design's GitHub Portfolio</title>
+<link rel="stylesheet" href="index-styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
 <style>
-@import url(index-styles.css);
+
 </style>
 </head>
 <div class = "flex-container">
