--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
-<!doctype html>
-<html lang="en-GB">
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<title>CSS Template</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width", initial-scale="1.0">
-<title>By Design's GitHub Portfolio</title>
-<link rel="stylesheet" href="index-styles.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
 </style>
 </head>
-<div class = "flex-container">
-  <body>
+<body>
 
-    <div class = "header">
-      <h2>Web Development Projects</h2>
-    </div>
-    
-    <div class="row">
-      <div class="column" style="background-color:#aaa;">
-        <a href="https://jpfiles.github.io/web-dev/Week 01/index.html">Beginning Web Design</a>
-      </div>
-      <div class="column" style="background-color:#bbb;">Column</div>
-      <div class="column" style="background-color:#ccc;">Column</div>
-    </div>
+<h2>CSS Template using Flexbox</h2>
+<p>In this example, we have created a header, three equal columns and a footer. On smaller screens, the columns will stack on top of each other.</p>
+<p>Resize the browser window to see the responsive effect.</p>
+<p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 eand earlier versions.</p>
 
-    </div> 
-    <div class="footer">
-      <p>Footer</p>
-    </div>
-  </body>
+<div class="header">
+  <h2>Header</h2>
 </div>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">Column</div>
+  <div class="column" style="background-color:#bbb;">Column</div>
+  <div class="column" style="background-color:#ccc;">Column</div>
+</div>
+
+<div class="footer">
+  <p>Footer</p>
+</div>
+
+</body>
 </html>
+
+
+
