--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ hr {
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3- w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-greeen w3-large w3-pale-green" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-grey w3-large w3-pale-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About Me</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">IT</a>
@@ -42,7 +42,7 @@ hr {
 </div> -->
 
 <!-- Header -->
-<header class="w3-container w3-pale-green w3-center" style="padding:128px 16px">
+<header class="w3-container w3-blue w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">UNDER CONTSTRUCTION</h1>
   <p class="w3-xlarge">
     Thanks for visiting my page!
