--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ hr {
 </div> -->
 
 <!-- Header -->
-<header class="w3-container w3-blue w3-center" style="padding:128px 16px">
+<header class="w3-container w3-light-blue w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">UNDER CONTSTRUCTION</h1>
   <p class="w3-xlarge">
     Thanks for visiting my page!
