--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ hr {
  <p>Created by Jonah Pickens</p>
 </footer>
 
-<script>
+<!-- <script>
 // Used to toggle the menu on small screens when clicking on the menu button
 function myFunction() {
   var x = document.getElementById("navDemo");
@@ -105,7 +105,7 @@ var countdownfunction = setInterval(function() {
     document.getElementById("demo").innerHTML = "EXPIRED";
   }
 }, 1000);
-</script>
+</script> -->
 
 </body>
 </html>
