--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@ hr {
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3- w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-grey w3-large w3-pale-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-grey w3-large w3-light-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">About Me</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">IT</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Cybersecurity</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Programming</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Contact</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Contact Me</a>
   </div>
 
-<!-- Navbar on small screens
+<!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">About Me</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">IT</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Cybersecurity</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Programming</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Contact Me</a>
   </div>
-</div> -->
+</div>
 
 <!-- Header -->
 <header class="w3-container w3-light-blue w3-center" style="padding:128px 16px">
